@@ -40,6 +40,7 @@ Improvements::
 
 Bug Fixes::
 
+* remove null character enclosed in XML tag when santizing text; fixes invisible text in outline when heading contains index term (#2430)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
